<resources>
    <string name="app_name">Hackathon-HTTPClientError-400</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Регистрация</string>
    <string name="user_name">Никнейм:</string>
    <string name="e_mail">E-mail:</string>
    <string name="phone">Телефон:</string>
    <string name="avtorization">Авторизация</string>
    <string name="password">Пароль:</string>
</resources>